# infrahub-vidra-demo

./: .gitignore  .infrahub.yml  Dockerfile  README copy.md  README.md  Taskfile.yml  pyproject.toml
.devcontainer/: devcontainer.json
GraphQL/: ArtifactIDs.gql  CreateBranch.gql  CreateProposedChange.gql  CreateVirtuellMaschine.gql  CreateWebserver.gql  GetVirtuellMaschine.gql  GetWebserver.gql
Schema/: service-schema.yaml
YAML_Templates/: virtuellmaschine.yaml  webserver.yaml
python_scripts/: __init__.py  createobjects.py  helperfunctions.py  startscript.py
python_transform/: __init__.py  helperfunctions.py  transform_virtuellmaschine.py  transform_webserver.py
webserver/: __init__.py  webserver.py
webserver/static/: style.css
webserver/templates/: index.html
