[tool.poetry]
name = "infrahub-integrationfor-ba"
version = "0.1.0"
description = ""
authors = ["Ramon Stutz <ramon.stutz@ost.ch>", "Simon Linder <simon.linder@ost.ch>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
flask = "*"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
ruff = "^0.7.2"
bandit = "^1.7.0"
go-task-bin = {version = "*", source = "pypi"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
ignore_errors = false
ignore_missing_imports = true
strict_optional = true
warn_unused_configs = true
warn_unused_ignores = true
warn_return_any = true
warn_redundant_casts = true

[tool.ruff.lint]
# 1. Enable flake8-bugbear (`N`) rules, in addition to the defaults.
select = ["E4", "E7", "E9", "F", "N", "D"]
ignore = ["D100"]